--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "starwars_rest",
+  "name": "starwars",
+  "homepage": "https://thefallender.github.io/starwars",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.19.2",
+    "gh-pages": "^3.0.0",
+    "lodash": "^4.17.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1"
@@ -14,7 +18,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
+    "gh-clean": "gh-pages-clean"
   },
   "eslintConfig": {
     "extends": "react-app"
